--- a/index.html
+++ b/index.html
@@ -1,5 +1,22 @@
 <!-- SEO Meta Tags -->
-<meta name="description" content="موقع شخصي لوليد الخلاق، مطوّر ويب، مهتم بالتكنولوجيا والبرمجة والذكاء الاصطناعي.">
-<meta name="keywords" content="وليد الخلاق, waleed alkhulaqi, مطور ويب, برمجة, تكنولوجيا, ذكاء اصطناعي, موقع شخصي">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>وليد الخلاق | مطور ويب ومصمم واجهات</title>
+<meta name="description" content="مطور ويب ومصمم واجهات، مهتم بالذكاء الاصطناعي وتطوير المواقع باستخدام HTML, CSS, JavaScript.">
+<meta name="keywords" content="وليد الخلاق, waleed alkhulaqi, مطور ويب, برمجة, HTML, CSS, JavaScript, ذكاء اصطناعي, موقع شخصي">
 <meta name="author" content="وليد الخلاق">
 <meta name="robots" content="index, follow">
+
+<!-- Open Graph / Social Media -->
+<meta property="og:title" content="وليد الخلاق | مطور ويب">
+<meta property="og:description" content="مطور ويب، مهتم بالذكاء الاصطناعي وتطوير المواقع.">
+<meta property="og:image" content="https://waleedalkhulaqi.website/images/profile.jpg">
+<meta property="og:url" content="https://waleedalkhulaqi.website">
+<meta property="og:type" content="website">
+<meta property="og:site_name" content="وليد الخلاق">
+
+<!-- Twitter Card -->
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="وليد الخلاق | مطور ويب">
+<meta name="twitter:description" content="مطور ويب، مهتم بالذكاء الاصطناعي وتطوير المواقع.">
+<meta name="twitter:image" content="https://waleedalkhulaqi.website/images/profile.jpg">
