--- a/index.html
+++ b/index.html
@@ -20,3 +20,135 @@
 <meta name="twitter:title" content="وليد الخلاق | مطور ويب">
 <meta name="twitter:description" content="مطور ويب، مهتم بالذكاء الاصطناعي وتطوير المواقع.">
 <meta name="twitter:image" content="https://waleedalkhulaqi.website/images/profile.jpg">
+<!DOCTYPE html>
+<html lang="ar" dir="rtl">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>وليد الخلاق | موقع شخصي</title>
+  <meta name="description" content="مطور ويب ومصمم واجهات، مهتم بالذكاء الاصطناعي وتطوير المواقع باستخدام HTML, CSS, JavaScript.">
+  <meta name="keywords" content="وليد الخلاق, waleed alkhulaqi, مطور ويب, برمجة, HTML, CSS, JavaScript, ذكاء اصطناعي">
+  <meta name="author" content="وليد الخلاق">
+  <meta name="robots" content="index, follow">
+
+  <!-- Open Graph -->
+  <meta property="og:title" content="وليد الخلاق | مطور ويب">
+  <meta property="og:description" content="مطور ويب، مهتم بالذكاء الاصطناعي وتطوير المواقع.">
+  <meta property="og:image" content="https://waleedalkhulaqi.website/images/profile.jpg">
+  <meta property="og:url" content="https://waleedalkhulaqi.website">
+  <meta property="og:type" content="website">
+
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="وليد الخلاق | مطور ويب">
+  <meta name="twitter:description" content="مطور ويب، مهتم بالذكاء الاصطناعي وتطوير المواقع.">
+  <meta name="twitter:image" content="https://waleedalkhulaqi.website/images/profile.jpg">
+
+  <style>
+    body {
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background-color: #f5f5f5;
+      color: #333;
+      margin: 0;
+      padding: 20px;
+      text-align: center;
+    }
+    .container {
+      max-width: 800px;
+      margin: auto;
+      padding: 20px;
+      background: white;
+      border-radius: 10px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+    }
+    h1 {
+      color: #0077cc;
+    }
+    p {
+      line-height: 1.6;
+    }
+    a {
+      color: #0077cc;
+      text-decoration: none;
+    }
+    a:hover {
+      text-decoration: underline;
+    }
+  </style>
+</head>
+<body>
+  <div class="container">
+    <h1>مرحباً، أنا وليد الخلاق</h1>
+    <p>مطور ويب ومصمم واجهات، مهتم بالذكاء الاصطناعي، البرمجة، وتطوير المواقع.</p>
+    <p>أعمل مع تقنيات مثل: <strong>HTML, CSS, JavaScript, React, Python</strong>.</p>
+    <p><a href="https://github.com/alkhulaqiw">ابقَ على اطلاع بمشاريعي على GitHub</a></p>
+    <p>يمكنك التواصل معي عبر: <a href="mailto:waleed@example.com">البريد الإلكتروني</a></p>
+  </div>
+</body>
+</html>
+<!DOCTYPE html>
+<html lang="ar" dir="rtl">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>وليد الخلاق | موقع شخصي</title>
+  <meta name="description" content="مطور ويب ومصمم واجهات، مهتم بالذكاء الاصطناعي وتطوير المواقع باستخدام HTML, CSS, JavaScript.">
+  <meta name="keywords" content="وليد الخلاق, waleed alkhulaqi, مطور ويب, برمجة, HTML, CSS, JavaScript, ذكاء اصطناعي">
+  <meta name="author" content="وليد الخلاق">
+  <meta name="robots" content="index, follow">
+
+  <!-- Open Graph -->
+  <meta property="og:title" content="وليد الخلاق | مطور ويب">
+  <meta property="og:description" content="مطور ويب، مهتم بالذكاء الاصطناعي وتطوير المواقع.">
+  <meta property="og:image" content="https://waleedalkhulaqi.website/images/profile.jpg">
+  <meta property="og:url" content="https://waleedalkhulaqi.website">
+  <meta property="og:type" content="website">
+
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="وليد الخلاق | مطور ويب">
+  <meta name="twitter:description" content="مطور ويب، مهتم بالذكاء الاصطناعي وتطوير المواقع.">
+  <meta name="twitter:image" content="https://waleedalkhulaqi.website/images/profile.jpg">
+
+  <style>
+    body {
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background-color: #f5f5f5;
+      color: #333;
+      margin: 0;
+      padding: 20px;
+      text-align: center;
+    }
+    .container {
+      max-width: 800px;
+      margin: auto;
+      padding: 20px;
+      background: white;
+      border-radius: 10px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+    }
+    h1 {
+      color: #0077cc;
+    }
+    p {
+      line-height: 1.6;
+    }
+    a {
+      color: #0077cc;
+      text-decoration: none;
+    }
+    a:hover {
+      text-decoration: underline;
+    }
+  </style>
+</head>
+<body>
+  <div class="container">
+    <h1>مرحباً، أنا وليد الخلاق</h1>
+    <p>مطور ويب ومصمم واجهات، مهتم بالذكاء الاصطناعي، البرمجة، وتطوير المواقع.</p>
+    <p>أعمل مع تقنيات مثل: <strong>HTML, CSS, JavaScript, React, Python</strong>.</p>
+    <p><a href="https://github.com/alkhulaqiw">ابقَ على اطلاع بمشاريعي على GitHub</a></p>
+    <p>يمكنك التواصل معي عبر: <a href="mailto:waleed@example.com">البريد الإلكتروني</a></p>
+  </div>
+</body>
+</html>
